Pequeños cambios para el frontend